--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
     <header>
         <nav class="nav-cont">
             <div class="icon"></div>
-            <div class="menu"></div>
+            <div class="menu" onclick="show_menu()">
+                <li id="menu-li">
+                    <ul>Главная</ul>
+                    <ul>О нас</ul>
+                    <ul>Меню</ul>
+                    <ul>Статьи</ul>
+                    <ul>КБЖУ</ul>
+                </li>
+            </div>
         </nav>
         <div class="content-container">
             <p class="p1">НОВОЕ НАЧАЛО - НОВЫЙ ТЫ</p>
             <p class="p2">Этот сайт был разработан с целью повышения качества питания с учётом желаний клиентов и их потребностей.</p>
             <p class="p2">С нами Вы сможете составить меню на неделю, посчитать потребности своего организма в КБЖУ, а также отслеживать своё питание.</p>
+            <p class="p2">Чтобы поддержать автора Вы можете отправить пожертвование на номер +7 (986) 929-89-04 (Т-банк, Ак Барс).</p>
             <p class="qoute-1">'Здоровое питание - это образ жизни, поэтому важно установить простые, реалистичные и в конечном итоге выполнимые правила'. - Гораций</p>
         </div>
     </header>
