Начать делать О нас

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <div class="icon"></div>
             <div class="menu" onclick="show_menu()">
                 <li id="menu-li">
-                    <ul>Главная</ul>
-                    <ul>О нас</ul>
-                    <ul>Меню</ul>
-                    <ul>Статьи</ul>
-                    <ul>КБЖУ</ul>
+                    <ul><a href="index.html">Главная</a></ul>
+                    <ul><a href="/src/pages/about.html">О нас</a></ul>
+                    <ul><a href="src/pages/menu.html">Меню</a></ul>
+                    <ul><a href="src/pages/articles.html">Статьи</a></ul>
+                    <ul><a href="src/pages/CPFC.html">КБЖУ</a></ul>
                 </li>
             </div>
         </nav>
@@ -29,7 +29,24 @@
         </div>
     </header>
     <main>
-
+        <div class="about-container">
+            <div class="my-photo-img"></div>
+            <div class="about-text-container">
+                <h1 class="about-title">О НАС</h1><br>
+                <div class="about-text-container_2">
+                    <p>Сайт разработан студентом Нижнекамского Индустриального Техникума в качестве продукта для проектной деятельности.</p>
+                    <p>Руководитель проекта: Имамов Руслан Ильдарович.</p>
+                    <p>Автор проекта: Антонов Дмитрий Александрович.</p>
+                    <p>Проблема многих людей - несбалансированное питание, в котором присутствует множество вредных привычек.</p>
+                    <p>Из-за проблемы несбалансированного питания страдает иммунитет, кости, мышцы и так далее.</p>
+                    <p>Продолжительность и качество жизни так же зависит от качества питания.</p>
+                    <p>В своей работе я подниму проблему неправильного питания. 
+                        Помогу составить правильное представление о правильном питании, предоставлю инструменты для правильного составления рациона.</p>
+                    <p>Спасибо за внимание!</p>
+                </div>
+            </div>
+            <div class="my-teacher-img"></div>
+        </div>    
     </main>
     <footer>
 
