--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     </header>
     <main>
         <div class="about-container">
-            <div class="my-photo-img"></div>
             <div class="about-text-container">
                 <h1 class="about-title">О НАС</h1><br>
                 <div class="about-text-container_2">
@@ -42,10 +41,13 @@
                     <p>Продолжительность и качество жизни так же зависит от качества питания.</p>
                     <p>В своей работе я подниму проблему неправильного питания. 
                         Помогу составить правильное представление о правильном питании, предоставлю инструменты для правильного составления рациона.</p>
-                    <p>Спасибо за внимание!</p>
+                        <p>Спасибо за внимание!</p>
+                    </div>
                 </div>
+            <div class="photos-cont">
+                <div class="my-photo-img"></div>
+                <div class="my-teacher-img"></div>
             </div>
-            <div class="my-teacher-img"></div>
         </div>    
     </main>
     <footer>
