--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <div class="breakfast-cont-3">
                                 <div class="breakfast-p" id="" onclick="show_content('intake', '', 'intake-b-m', 'arrow-b-m')"><h2>Завтрак</h2></div>
                                 <div class="arrow-intake" id="arrow-b-m" onclick="show_content('intake', '', 'intake-b-m', 'arrow-b-m')"></div>
-                                <div class="sum-of-calories" id="sumOfCalories"></div>
+                                <!-- <div class="sum-of-calories" id="sumOfCalories"></div> -->
                             </div>
                             <div class="breakfast-cont-2" id="intake-b-m">
                                 <div class="breakfast-dishes">
